tests/parser/syntax-errors/no-lhs-in-assignment/expected_expr_before_assign.choc
# RUN: choco-opt "%s" | filecheck "%s"

= 1

# CHECK:      SyntaxError (line 3, column 1): No left-hand side in assign statement.
# CHECK-NEXT: >>>= 1
# CHECK-NEXT: >>>^
